--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -160,7 +160,9 @@
             min-width: 80px;
             overflow: hidden;
             border-radius: 12px;
-
+            .img-responsive {
+                height: 100%
+              }
             &:hover img {
                 transform: scale(1.2);
                 box-shadow: 0px 4px 24px rgb(0 0 0 / 50%);
