--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -820,7 +820,7 @@ body {
                         .nft-collection-title {
                             font-weight: 400;
                             font-size: 12px;
-                            line-height: 20px;
+                            line-height: 1rem;
                             color: #121212;
                             opacity: 0.5;
                         }
