--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -923,6 +923,7 @@ body {
     }
 
     .nft-list {
+      position: relative;
       display: flex;
       flex-wrap: wrap;
       margin: 0 -.5rem 1rem -.5rem;
