--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -39,8 +39,11 @@
     text-transform: uppercase;
     color: #000000;
 }
-.nft-collection-container {
+.profile-sub-container{
     position: relative;
+    min-height: 5rem;
+}
+.nft-collection-container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -48,7 +51,6 @@
     width: 100%;
     overflow: hidden;
     margin: 1rem 0;
-    min-height: 5rem;
    
 
     .collection-switcher {
@@ -156,6 +158,7 @@
         max-width: 100%;
         box-sizing: border-box;
         margin-top: 10px;
+
 
         .collection-nft-item {
             width: 80px;
