Fix layout bugs

--- a/styles/scss/_avatars.scss
+++ b/styles/scss/_avatars.scss
@@ -3,7 +3,7 @@
   @include avatar-base();
   background: rgba(darken($primary-color, 40%), .15);
   border-radius: 50%;
-  box-shadow: 0 .3rem 1.2rem rgba(0, 0, 0, .15);
+  box-shadow: 0 .3rem .6rem rgba(0, 0, 0, .1);
   color: rgba($light-color, .85);
   display: inline-block;
   font-weight: 300;
