fix: mobile style

--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -600,9 +600,9 @@ body {
 // Identity Panel
 .identity-panel {
   bottom: 1rem;
-  left: -1rem;
+  left: 0;
   position: absolute;
-  right: -1rem;
+  right: 0;
   top: 1rem;
 }
 
@@ -937,6 +937,8 @@ body {
   background: #fff;
   box-shadow: 0 .1rem 1rem rgba($dark-color, .1);
   user-select: none;
+  padding: 0 0.5rem;
+  box-sizing: border-box;
 
   .collection-list {
     display: flex;
@@ -1044,6 +1046,7 @@ body {
     .nft-container {
       flex: 0 0 33.3333%;
       width: 33.3333%;
+      min-width: 8rem;
     }
 
     .nft-item {
@@ -1058,7 +1061,7 @@ body {
 
       .img-container {
         margin-bottom: .5rem;
-
+      
         .img-responsive {
           border-radius: .5rem;
           box-shadow: 0 .2rem 1rem rgba($dark-color, .15), 0 .05rem .2rem rgba($dark-color, .05);
@@ -1083,10 +1086,9 @@ body {
 
 .nft-panel {
   height: calc(100vh - 1rem);
-  left: -1rem;
   position: absolute;
-  right: -1rem;
   top: 1rem;
+  width: 100%;
 
   .panel-container {
     height: calc(100vh - 2rem);
@@ -1095,7 +1097,11 @@ body {
   .panel-header {
     overflow: hidden auto;
     padding: 1rem;
-
+    .img-container{
+      display: flex;
+      min-width: 100%;
+     
+    }
     .panel-header-img {
       flex: 1 1 50%;
       margin-right: 1rem;
@@ -1103,6 +1109,7 @@ body {
     }
 
     .img-responsive {
+      width: 100%;
       border-radius: .5rem;
     }
 
