--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -273,6 +273,35 @@ body {
       top: .2rem;
       width: 2rem;
     }
+
+    .search-list {
+      animation: slide-down .35s ease 1;
+      display: block;
+      left: 0;
+      overflow-y: auto;
+      position: absolute;
+      top: 2.5rem;
+      background: #fff;
+      border-radius: .25rem;
+      width: 100%;
+      z-index: 999;
+
+      .search-list-item {
+        padding: .5rem .8rem;
+        display: flex;
+        gap: 1rem;
+        align-items: center;
+        cursor: pointer;
+
+        &:hover {
+          background: rgba($dark-color, .05);
+        }
+      }
+
+      .search-list-item-active {
+        background: rgba($dark-color, .05);
+      }
+    }
   }
 
   &.focused {
@@ -745,7 +774,7 @@ body {
     margin: 1rem 0;
     display: flex;
     gap: .5rem;
-    
+
     .action-btn {
       position: relative;
       width: 1.8rem;
@@ -829,9 +858,7 @@ body {
 }
 
 .social-feeds-list {
-  .social-feeds-item {
-
-  }
+  .social-feeds-item {}
 
   .feed-item-box {
     display: flex;
@@ -1069,7 +1096,7 @@ body {
 
       .img-container {
         margin-bottom: .5rem;
-      
+
         .img-responsive {
           border-radius: .5rem;
           box-shadow: 0 .2rem 1rem rgba($dark-color, .15), 0 .05rem .2rem rgba($dark-color, .05);
@@ -1105,11 +1132,13 @@ body {
   .panel-header {
     overflow: hidden auto;
     padding: 1rem;
-    .img-container{
+
+    .img-container {
       display: flex;
       min-width: 100%;
-     
+
     }
+
     .panel-header-img {
       flex: 1 1 50%;
       margin-right: 1rem;
