--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -227,8 +227,10 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    position: relative;
     transform: translateY(20vh);
     transition: all .25s ease-in-out;
+    z-index: 999;
   }
 
   .web3bio-logo {
@@ -275,26 +277,35 @@ body {
     }
 
     .search-list {
-      animation: slide-down .35s ease 1;
+      animation: slide-down .2s ease 1;
+      background: #fff;
+      box-shadow: 0 .8rem 4rem rgba($dark-color, .25), 0 .05rem .2rem rgba($dark-color, .1);
+      border-radius: .4rem;
       display: block;
       left: 0;
       overflow-y: auto;
+      padding: .5rem;
       position: absolute;
       top: 2.5rem;
-      background: #fff;
-      border-radius: .25rem;
       width: 100%;
-      z-index: 999;
+      z-index: 9999;
 
       .search-list-item {
-        padding: .5rem .8rem;
-        display: flex;
-        gap: 1rem;
         align-items: center;
+        border-radius: .4rem;
         cursor: pointer;
+        display: flex;
+        padding: .5rem;
+        gap: .5rem;
+        transition: all .2s ease;
 
+        &:focus,
         &:hover {
           background: rgba($dark-color, .05);
+        }
+
+        &:not(:last-child) {
+          margin-bottom: .05rem;
         }
       }
 
