fix: graph index

--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -587,6 +587,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 9999;
 
   .graph-header {
     align-items: center;
