--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -1,37 +1,40 @@
 // Variables and mixins
 @import "variables";
-@import "mixins";
+@import "spectre/mixins";
 
 /*! Spectre.css | MIT License | github.com/picturepan2/spectre */
 // Reset and dependencies
-@import "normalize";
-@import "base";
+@import "spectre/normalize";
+@import "spectre/base";
 
 // Elements
-@import "typography";
-@import "buttons";
-@import "forms";
-@import "labels";
-@import "media";
+@import "spectre/typography";
+@import "spectre/buttons";
+@import "spectre/forms";
+@import "spectre/labels";
+@import "spectre/media";
 
 // Layout
-@import "layout";
+@import "spectre/layout";
 
 // Components
-@import "avatars";
-@import "cards";
-@import "dropdowns";
-@import "empty";
-@import "menus";
-@import "modals";
-@import "navs";
-@import "pagination";
-@import "toasts";
-@import "tooltips";
+@import "spectre/avatars";
+@import "spectre/cards";
+@import "spectre/dropdowns";
+@import "spectre/empty";
+@import "spectre/menus";
+@import "spectre/modals";
+@import "spectre/navs";
+@import "spectre/pagination";
+@import "spectre/toasts";
+@import "spectre/tooltips";
 
 // Utility classes
-@import "animations";
-@import "utilities";
+@import "spectre/animations";
+@import "spectre/utilities";
+
+// Components
+@import "panel";
 
 // Variables
 $pride-color-1: #FBF4EC !default;
@@ -218,365 +221,6 @@ body {
     @media screen and (max-width: $size-md) {
       font-size: 1.2rem;
     }
-  }
-}
-
-//- Web3.bio Search
-.web3bio-search {
-  .search-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    position: relative;
-    transform: translateY(20vh);
-    transition: all .25s ease-in-out;
-    z-index: 99;
-  }
-
-  .web3bio-logo {
-    margin-bottom: .2rem;
-  }
-
-  .form-label {
-    font-size: 2.2rem;
-    font-weight: 900;
-    letter-spacing: -.05rem;
-    line-height: 1;
-    margin-bottom: 1rem;
-
-    @media screen and (max-width: $size-md) {
-      font-size: 2rem;
-    }
-
-    span {
-      font-weight: 400;
-    }
-  }
-
-  .form-input-group {
-    margin: .3rem 0;
-    position: relative;
-
-    .form-input {
-      border: transparent;
-      box-shadow: 0 .05rem .2rem rgba($dark-color, .1);
-      padding-right: 2.4rem;
-
-      &:focus {
-        box-shadow: 0 .8rem 4rem rgba($dark-color, .25), 0 .05rem .2rem rgba($dark-color, .1);
-      }
-    }
-
-    .form-button {
-      height: 2rem;
-      padding: 0;
-      position: absolute;
-      right: .2rem;
-      top: .2rem;
-      width: 2rem;
-    }
-
-    .search-list {
-      animation: slide-down .2s ease 1;
-      background: #fff;
-      box-shadow: 0 .8rem 4rem rgba($dark-color, .25), 0 .05rem .2rem rgba($dark-color, .1);
-      border-radius: .4rem;
-      display: block;
-      left: 0;
-      overflow-y: auto;
-      padding: .5rem;
-      position: absolute;
-      top: 2.5rem;
-      width: 100%;
-      z-index: 100;
-
-      .search-list-item {
-        align-items: center;
-        border-radius: .4rem;
-        cursor: pointer;
-        display: flex;
-        padding: .5rem;
-        gap: .5rem;
-        transition: all .2s ease;
-
-        &:focus,
-        &:hover {
-          background: rgba($dark-color, .05);
-        }
-
-        &:not(:last-child) {
-          margin-bottom: .05rem;
-        }
-      }
-
-      .search-list-item-active {
-        background: rgba($dark-color, .05);
-      }
-    }
-  }
-
-  &.focused {
-    .search-form {
-      transform: translateY(0);
-    }
-
-    .form-label {
-      display: none;
-    }
-  }
-
-  .loading-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-}
-
-// Search results
-.search-result {
-  animation: slide-down .2s ease 1;
-  background: rgba($light-color, .85);
-  border-radius: $border-radius;
-  box-shadow: 0 .05rem .2rem rgba($dark-color, .1);
-  position: relative;
-
-  .search-result-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: .6rem;
-    padding: .8rem;
-
-    .search-result-text {
-      word-break: break-all;
-      word-wrap: break-word;
-    }
-
-    .btn {
-      align-items: center;
-      display: inline-flex;
-      flex-shrink: 0;
-
-      svg {
-        margin-right: .2rem;
-      }
-    }
-  }
-
-  .search-result-body {
-    display: flex;
-    flex-direction: column;
-    padding: 0 .8rem .8rem .8rem;
-  }
-
-  .social-item {
-    background: rgba($gray-color, .05);
-    border-radius: $border-radius;
-    display: flex;
-    position: relative;
-    transition: all .2s ease-in;
-    width: 100%;
-
-    &:not(:last-child) {
-      margin-bottom: .2rem;
-    }
-
-    &:focus,
-    &:hover {
-      background: rgba($gray-color, .1);
-      transform: translateY(-.1rem);
-
-      .actions {
-        display: flex;
-      }
-
-      .social-footer {
-        display: flex;
-      }
-    }
-
-    &:active {
-      background: rgba($gray-color, .15);
-    }
-
-    .social-main {
-      align-items: center;
-      display: flex;
-      flex: 1 1 1rem;
-      overflow: hidden;
-      padding: .4rem;
-      width: 80%;
-
-      .avatar {
-        align-items: center;
-        border-radius: .5rem;
-        display: flex;
-        flex: 0 0 1.6rem;
-        justify-content: center;
-        margin-right: .4rem;
-      }
-
-      .social {
-        width: 100%;
-      }
-
-      .title {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-    }
-
-    .social-actions {
-      padding: .25rem;
-
-      .action {
-        background: rgba($dark-color, .035);
-        height: 100%;
-      }
-    }
-
-    .social-footer {
-      align-items: center;
-      background: linear-gradient(-135deg, rgba($dark-color, .05), transparent);
-      border-radius: .1rem;
-      color: $gray-color;
-      display: none;
-      font-size: .5rem;
-      height: .6rem;
-      justify-content: flex-end;
-      padding: 0;
-      position: absolute;
-      right: 0;
-      top: -.2rem;
-    }
-
-    &.social-web3 {
-      .social-main {
-        align-items: flex-start;
-        flex-direction: column;
-      }
-    }
-
-    &.lens {
-      .bg-lens {
-        background: #BDFC5A;
-        color: #204F24;
-      }
-    }
-
-    &.farcaster {
-      .bg-farcaster {
-        background: #8a63d2;
-        color: #fff;
-      }
-    }
-  }
-
-  .nfts {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .label-ens {
-    align-items: center;
-    border-radius: .3rem;
-    color: lighten($dark-color, 20%);
-    display: inline-flex;
-    font-size: .6rem;
-    line-height: .8rem;
-    margin: .2rem .2rem 0 0;
-    max-width: 12rem;
-    padding: .1rem .3rem .1rem .15rem;
-    text-decoration: none;
-
-    span {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-
-    img {
-      flex: 0 0 .5rem;
-      margin-right: .2rem;
-    }
-  }
-
-  .actions {
-    display: none;
-    margin-left: auto;
-    padding: .2rem;
-
-    .action {
-      align-items: center;
-      display: inline-flex;
-      font-size: .55rem;
-      line-height: 1.2rem;
-      position: relative;
-    }
-  }
-
-  .h4 {
-    line-height: 1;
-    word-break: break-all;
-  }
-}
-
-.social {
-  align-items: center;
-  border-radius: .2rem;
-  display: flex;
-  flex: 1;
-  font-size: .6rem;
-  line-height: 1rem;
-  padding: .1rem .3rem .1rem .1rem;
-  text-decoration: none;
-  transition: all .25s ease-in-out;
-
-  .icon {
-    border-radius: $border-radius;
-    color: $dark-color;
-    font-size: .7rem;
-    height: 1.6rem;
-    margin-right: .2rem;
-    padding: .3rem;
-    width: 1.6rem;
-  }
-
-  .content {
-    flex: 1;
-  }
-
-  .content-title {
-    font-size: .8rem;
-    line-height: 1.2rem;
-  }
-
-  .content-subtitle {
-    align-items: center;
-    display: flex;
-    font-size: .55rem;
-    line-height: 1rem;
-
-    .action {
-      cursor: pointer;
-      flex: 0 1;
-      height: 1rem;
-      margin-left: .2rem;
-      position: relative;
-      transition: all .2s ease-in-out;
-      width: 1rem;
-
-      &:focus,
-      &:hover {
-        color: $dark-color;
-      }
-    }
-  }
-
-  .title {
-    font-size: .7rem;
   }
 }
 
